# clawpal

./: README.md  agents.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
docs/: mvp-checklist.md
docs/plans/: 2026-02-15-clawpal-mvp-design.md  2026-02-15-clawpal-mvp-implementation-plan.md  2026-02-16-clawpal-product-redesign.md  2026-02-16-clawpal-redesign-implementation-plan.md  2026-02-16-model-channel-management-implementation.md  2026-02-16-openclaw-cli-model-catalog-upgrade-channels.md  2026-02-18-ssh-remote-management-design.md
scripts/: release.sh
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  recipes.json  tauri.conf.json
src-tauri/src/: commands.rs  config_io.rs  doctor.rs  history.rs  lib.rs  main.rs  models.rs  recipe.rs  ssh.rs
src/components/: Chat.tsx  CreateAgentDialog.tsx  DiffViewer.tsx  InstanceTabBar.tsx  ParamForm.tsx  RecipeCard.tsx
src/lib/: actions.ts  api.ts  chat.ts  instance-context.tsx  recipe_catalog.ts  state.ts  types.ts  utils.ts
src/pages/: Channels.tsx  Cook.tsx  Doctor.tsx  History.tsx  Home.tsx  Install.tsx  Recipes.tsx  Settings.tsx
