[package]
name = "clawpal"
version = "0.1.0"
edition = "2021"

[lib]
name = "clawpal"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
dirs = "5.0.1"
json5 = "0.4.1"
regex = "1.10.6"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.133"
tauri = { version = "2.1.0", features = [] }
thiserror = "1.0.63"
uuid = { version = "1.11.0", features = ["v4"] }
chrono = { version = "0.4.38", features = ["clock"] }

[build-dependencies]
tauri-build = { version = "2.1.0", features = [] }
